# MT2ChihiroDecomp

./: CMakeLists.txt  _set_up_hw_and_proj_title.cpp  _set_up_renderware_info.cpp  _switch_call_dbg_menu_on_12h.cpp  main.cpp  main_switch_block.cpp  populate_graphics_modes.cpp
